# monit

./: CHANGES.txt  Makefile.am  Makefile.in  bootstrap  build-debian.conf  configure.ac  log.c  make_dist  monit-disable  monit-disable.1  monit-enable  monit-enable.1  monit-enable.1.txt  monit-update.conf.1  monit-update.conf.conf  monit-update.conf.conf.1  monit.pod  monitor.h  net.c  ssl.c  update-monit.conf  update-monit.conf.1  update-monit.conf.1.txt  update-monit.conf.conf  update-monit.conf.conf.1
config/: monitrc
config/svc-available.in/: apache2  apache2-ssl  cron  exim4  lldpd  mailrc  munin-node  mysqld  nagios3  net-snmp  nrpe  ntpd  rsyslogd  ssh  unbound  webuirc
config/svc-enabled/: README
debian/: README.Debian  TODO.Debian  changelog  control  copyright  example.monitrc  monit.dirs  monit.docs  monit.init  monit.install  monit.links  monit.lintian-overrides  monit.logrotate  monit.manpages  monit.postinst  monit.postrm  rules  watch
debian/patches/: 01_config_file_relocation.patch  02_monit.1_debian_path.patch  02_monit.pod_debian_path.patch  05_monitrc.patch  06_smtp_ehlo_fix.patch  07_fqdn_in_HOST.patch  08_fix_yacc_in_Makefile.am.patch  09_fix_http.patch  series
doc/: monit.html
libmonit/: COPYING  Makefile.am  README  bootstrap  configure.ac
libmonit/libmonit.xcodeproj/: project.pbxproj
libmonit/libmonit.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libmonit/libmonit.xcodeproj/project.xcworkspace/xcuserdata/hauk.xcuserdatad/: UserInterfaceState.xcuserstate
libmonit/libmonit.xcodeproj/xcuserdata/hauk.xcuserdatad/xcschemes/: libmonit.xcscheme  xcschememanagement.plist
libmonit/src/: Bootstrap.c  Bootstrap.h  Config.h
libmonit/src/exceptions/: AssertException.h  Exception.c  Exception.h  IOException.h  MemoryException.h  NumberFormatException.h  assert.c  assert.h
libmonit/src/io/: Dir.c  Dir.h  File.c  File.h  InputStream.c  InputStream.h  OutputStream.c  OutputStream.h
libmonit/src/system/: Command.c  Command.h  Mem.c  Mem.h  Net.c  Net.h  Process.h  System.c  System.h
libmonit/src/thread/: Atomic.h  Thread.c  Thread.h
libmonit/src/util/: List.c  List.h  Str.c  Str.h  StringBuffer.c  StringBuffer.h
process/: sysdep_SOLARIS.c
src/: monit.c
